## *****************************************************************************
## DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
##
## Copyright 2022 Tino Jungebloud <tino@jungebloud.de>
## 
##
## This confidential and proprietary software may be disclosed,
## used, or copied only as authorized by a license agreement from
## the copyright owner
## *****************************************************************************

add_subdirectory(score)

#EOF
